feat: endgame and restart game added without styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <div id="cursor"></div>
     <div id="game-container"></div>
+    <div id="end-game" class="hidden">
+      <h3>Congratulations!!</h3>
+      <p>You have end the game</p>
+      <button id="restart-game">Play again</button>
+    </div>
+    <div id="blur" class="hidden"></div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
