modificado el sistema a clases independientes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <button id="restart-game">Play again</button>
     </div>
     <div id="blur" class="hidden"></div>
-    <script type="module" src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
+    <script type="module" src="game.js"></script>
   </body>
 </html>
