--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>OOP GAME</h1>
-    <h3 id="score">Score: 0</h3>
+    <h3 id="score">Remain: <span id="score-value">3</span></h3>
 
     <div id="cursor"></div>
     <div id="game-container"></div>
