--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <h1>OOP GAME</h1>
-    <h3 id="score">Remain: <span id="score-value">3</span></h3>
 
-    <div id="cursor"></div>
-    <div id="game-container"></div>
+    <div class="container">
+      <div id="game-container"></div>
+    </div>
     <script type="module" src="game.js"></script>
   </body>
 </html>
