--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OOP GAME</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
-     <div class="container">
+    <div class="container">
       <div id="game-container"></div>
     </div>
-    <script type="module" src="game.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
